2016-11-23 Added outstretch height command to player controller
2016-11-22 Added looping in Video module
2016-11-21 Fixed refreshing animated gifs in Layered Image module
2016-11-21 Added isAttempted command in Paragraph module
2016-11-17 Added continous events in Clock module
2016-11-17 Fixed calculating max score in Choice module
2016-11-16 Removed unicode special characters from Shape Tracing comments
2016-11-08 Fixed width calculating in Table addon.
2016-11-03 Fixed showAnswer, setShowErrorMode bugs in Grid Scene addon.
2016-11-03 Added Blockly Code Editor addon. Fixed bugs in Grid Scene. Added property Editable Select and Select for list.
2016-10-27 Added hiding answers after reset in Image Gap module
2016-10-27 Fixed operating on module in popup page in Connection and eKeyboard modules
2016-10-27 Fixed setting space after punctuation marks in Text Coloring module
2016-10-26 Fixed problem with saving state in Paragraph module
2016-10-25 Fixed issue with setting element to invisible module in Multiplagap module
2016-10-24 Fixed saving and closing notes in IWB Toolbar
2016-10-21 Fixed issue with pen and marker tools in IWB Toolbar module
2016-10-07 Added new addon Text Coloring, added new commons ErrorUtils and fixed SAO depedencies
2016-10-04 Added getText command in Paragraph module
2016-09-29 Fixed setting state in Paragraph module
2016-09-27 Fixed displaying animation with transparent background in Animation module
2016-09-26 Added events on pause and pause command in Audio module
2016-09-21 Added test from Programming Code Prompt
2016-09-21 Added Progamming Code Prompt addon. Added Grid Scene addon. Added static list property.
2016-09-21 Fixed issue with moved droppable area in Connection module
2016-09-21 Fixed setting gap size in Table module
2016-09-19 Fixed issue with missing arguments in function in Paragraph addon